refactor(controller_qt): remove legacy JavaFX control panel, keep Qt panel only
- delete controller/ (JavaFX 21 / Maven panel) and its jar artifact
- build.py targets are now renderer | qt | all; clean .gitignore, BUILD.md
  and .opencode/skills/build.md accordingly
- rewrite root AGENTS.md knowledge base for the Qt-only reality
- delete Java-specific docs; relocate docs/controller/* to docs/controller_qt/
- sweep all remaining Java-panel references across docs/, renderer/ and
  controller_qt/ (comment-level only, zero behavior changes)