@@ -68,29 +68,22 @@ python build.py renderer    # build.py 默认构建 OpenGL + Vulkan 双后端
 > **说明**：GLFW 和 GLEW 从 Cubism SDK 内置源码编译，无需安装系统包（`libglfw3-dev`、`libglew-dev`）。WebSocket 通信使用本地连接，未启用 TLS（`USE_TLS=OFF`），无需 `libssl-dev`。
 > **音频依赖（Phase 3b，已集成）**：miniaudio（single-header，vendored 于 `renderer/third_party/miniaudio.h`）+ libogg/libvorbis（CMake FetchContent 拉取，1.3.5 / 1.3.7）。渲染器侧音频播放已实现，**已替代原 OpenAL 方案**，无需 `libopenal-dev`。
 
-**Java 控制面板（Phase 2）**：
+**Qt 控制面板（controller_qt，Phase 5-9）**：
 
 ```bash
-# 编译 + 测试
-mvn clean verify
+# 统一构建脚本（推荐：自动配置 CMAKE_PREFIX_PATH、隔离 MinGW 工具链、运行 windeployqt）
+python build.py qt
 
-# 打包（含依赖的 fat-jar）
-mvn clean package
+# 输出
+# build/bin/desktop-pet-controller-qt(.exe)
 
-# 生成最小化 JRE
-jlink --module-path $JAVA_HOME/jmods:target/modules \
-      --add-modules java.base,java.desktop,javafx.controls,javafx.fxml \
-      --output target/runtime \
-      --strip-debug --compress zip-6
-
-# 生成平台原生安装包
-jpackage --input target/ \
-         --main-jar desktop-pet-controller.jar \
-         --runtime-image target/runtime \
-         --name desktop-pet-controller \
-         --type deb \
-         --app-version 1.0.0
+# 运行测试（41 个 QTest 二进制）
+ctest --test-dir build/controller_qt
 ```
+
+> **手动构建注意（Windows）**：`controller_qt/` 必须使用 Qt 自带的 MinGW 13.1.0（`C:\Qt\Tools\mingw1310_64`），与渲染引擎所用 MinGW 相互独立。裸 `cmake` 手动构建时必须自行将其前置到 `PATH` 并过滤 Git 自带的 MinGW（详见 [开发语言与工具链](./toolchain.md)）。
+>
+> **首次配置**需要网络：CMake FetchContent 拉取 FluentUI 与 spdlog（后续构建复用 `build/_deps/` 缓存）。Windows 下 `build.py qt` 还会额外复制 `Qt5Compat/GraphicalEffects` 与 `Qt6ShaderTools.dll` 到 exe 旁（windeployqt 无法探测这些 QML 内部导入）。
 
 ---
 
@@ -98,12 +91,12 @@ jpackage --input target/ \
 
 **MVP**：仅 C++ 渲染引擎可执行文件。
 
-**当前（Ubuntu + Windows 双平台）**：同时提供两种分发形式：
+**当前（Ubuntu + Windows 双平台）**：渲染引擎为独立可执行文件；Qt 控制面板在 Windows 上由 `windeployqt` 将 Qt 运行时（DLL/插件/QML 导入）自动部署到 `build/bin/` 的 exe 旁，**目标机器无需安装 Qt** 即可运行。
 
 | 形式 | Ubuntu | Windows |
 |:---|:---|:---|
-| 安装包 | .deb（jpackage 生成） | .msi / .exe（jpackage 生成） |
-| 免安装压缩包 | .tar.gz | .zip |
+| 免安装目录 | .tar.gz | .zip（`build/bin/` 打包即用） |
+| 安装包 | 待定 | 待定（NSIS / Inno Setup 生成，推迟到后续任务） |
 
 > **Windows 构建说明**：Windows 版使用 MinGW Makefiles（非 MSVC）。打包时需一并分发 `Live2DCubismCore.dll`、`FrameworkShaders/`（Vulkan 后端的 SPIR-V 着色器）、`Resources/`（模型资源）及 MinGW 运行时依赖 DLL。统一构建脚本 `python build.py all` 产物输出到 `build/bin/`。
 
@@ -120,28 +113,26 @@ desktop-pet/
     └── Haru/
 ```
 
-**完整版（Phase 1-3）**：
+**完整版（Phase 1-3 + controller_qt）**：
 
 ```plain
 desktop-pet/
 ├── bin/
-│   ├── desktop-pet-controller.jar    # Java 控制面板 Fat-JAR（Launcher 入口，绕过 JPMS）
+│   ├── desktop-pet-controller-qt[.exe]  # Qt 控制面板可执行文件（windeployqt 部署 Qt 运行时）
 │   ├── desktop-pet-renderer[.exe]    # C++ 渲染引擎可执行文件（OpenGL 后端）
 │   ├── desktop-pet-renderer-vulkan[.exe]  # C++ 渲染引擎可执行文件（Vulkan 后端，编译时 -DUSE_VULKAN=ON 产物）
 │   ├── Live2DCubismCore[.dll|.so]    # Cubism Core 动态库（Windows 分发 .dll）
 │   ├── FrameworkShaders/             # Vulkan 后端 SPIR-V 着色器（仅 Vulkan 变体）
 │   └── Resources/                    # 默认模型（Haru/Hiyori 等 SDK 示例模型）
 ├── lib/
-│   ├── *.so / *.dll                  # C++ 运行时动态库（MinGW 运行时依赖，Windows）
-│   ├── app/                          # Java 应用 JAR
-│   └── runtime/                      # 内嵌 JRE（jlink 生成的最小化运行时）
+│   └── *.so / *.dll                  # C++ 运行时动态库（MinGW 运行时依赖，Windows）
 ├── models/                           # 默认模型（不含音频文件）
 │   └── default/
 ├── audio/                            # 音频文件独立目录（Phase 3，与模型分离存储）
 │   └── default/                      # 默认音频文件（OGG，由渲染器 AudioManager 播放）
 └── config/
     ├── config.json                   # 默认配置（首次启动复制到 ~/.config/desktop-pet/）
-    └── audio_mapping.json            # 音频映射配置（Phase 3b，控制器侧 AudioMappingManager 待实现）
+    └── audio_mapping.json            # 音频映射配置（Phase 3b，控制器侧待实现）
 ```
 
 > **graphics 双后端说明**：渲染引擎通过 `IGraphicsBackend` 抽象接口提供 `OpenGLBackend` 与 `VulkanBackend` 双实现，编译时由 `USE_VULKAN` 开关决定链接哪个后端（无运行时切换）。分发时可选只发布单一后端可执行文件，或同时发布两个变体由用户/启动器选择。Vulkan 后端依赖系统的 Vulkan 驱动（Vulkan 1.2+），需额外分发 `FrameworkShaders/` 下的 SPIR-V 着色器。
